--- a/views/login-pandit.pug
+++ b/views/login-pandit.pug
@@ -8,11 +8,11 @@ block content
                 form.form-horizontal.login-font
                     .form-group.row.col-md-4
                         label.control-label Email or User name:
-                        input.form-control(type='text', name='uname', placeholder:'Enter your email or username')
+                        input.form-control(type='text', name='uname', placeholder='Enter your email or username' ,required='required')
                     
                     form-group.row.col-md-4
                         label.control-label Password:
-                        input.form-control(type='password', name='password', placeholder:'Enter your password')
+                        input.form-control(type='password', name='password', placeholder='Enter your password', required='required')
                     
                     form-group.row.col-md-6
                         button.btn.btn-success.btn-md(type='submit',name='submit') Login
