--- a/views/layout.pug
+++ b/views/layout.pug
@@ -5,8 +5,9 @@ html
     link(rel='stylesheet', href='/stylesheets/style.css')
     link(rel='stylesheet', href='/stylesheets/bootstrap.css')
   body
-    nav.navbar.navbar-expand-lg.navbar-light.bg-light
-      a.navbar-brand(href='#') Navbar
+    nav.navbar.navbar-expand-lg.navbar-light.nav-style
+      b 
+        a.navbar-brand(href='#') FindUrPanditji
       button.navbar-toggler(type='button', data-toggle='collapse', data-target='#navbarSuportedContent', aria-controls='navbarSupportedContent', aria-expanded='false', aria-label='Toggle navigation')
         span.navbar-toggler-icon sdkhd
       
@@ -17,25 +18,43 @@ html
               span.sr-only (current)
 
           li.nav-item
+            a.nav-link(href='./users/annaprashan') Book Puja
+
+          li.nav-item.dropdown
+            a.nav-link.dropdown-toggle#navbarDropdown(href='#', role='button', data-toggle='dropdown', aria-haspopup='true', aria-expanded='false') PanditJi
+            .dropdown-menu(aria-labelledby='navbarDropdown')
+              a.dropdown-item(href='./users/pandit-in-bhopal') Panditji in Bhopal
+              a.dropdown-item(href='./users/modal') Panditji in Indore
+          
+          li.nav-item.dropdown
+            a.nav-link.dropdown-toggle#navbarDropdown(href='#', role='button', data-toggle='dropdown', aria-haspopup='false', aria-expanded='false') Gods
+            .dropdown-menu(aria-labelledby='navbarDropdown')
+              a.dropdown-item(href='./users/shiv') Shiv ji
+              a.dropdown-item(href='./users/laxmi') Laxmi ji
+              a.dropdown-item(href='./users/vishnu') Vishnu ji
+              a.dropdown-item(href='./users/durga') Durga ji
+              a.dropdown-item(href='./users/ganesh') Ganesh ji
+              a.dropdown-item(href='./users/saraswati') Saraswati ji
+
+          li.nav-item
             a.nav-link(href='./users/registration-pandit') Register
 
           li.nav-item
             a.nav-link(href='/users/login-pandit') Login
 
-          li.nav-item.dropdown
-            a.nav-link.dropdown-toggle#navbarDropdown(href='#', role='button', data-toggle='dropdown', aria-haspopup='true', aria-expanded='false') Dropdown
-            .dropdown-menu(aria-labelledby='navbarDropdown')
-              a.dropdown-item(href='#') Action
-              a.dropdown-item(href='#') Another Action
-              .dropdown-divider
-              a.dropdown-item(href='#') Something elss ehere
+          li.nav-item
+            a.nav-link(href='/users/billing-form') Billing Page
 
-          li.nav-item 
-            a.nav-link.disabled(href='#', tabindex='-1', aria-disabled='true') Disabled
+          li.nav-item
+            a.nav-link(href='/users/contact-us') Contact us
+
+          //- li.nav-item 
+          //-   a.nav-link.disabled(href='#', tabindex='-1', aria-disabled='true') Disabled
           
         form.form-inline.my-2.my-lg-0
           input.form-control.mr-sm-2(type='search', placeholder='Search' aria-label='Search')
           button.btn.btn-outline-success.my-2.my-sm-0(type='submit') Search
 
     block content
+    script(src='/javascripts/jquery-3.3.1.min.js')
     script(src='/javascripts/bootstrap.js')
