Added passport authentication and form handling stuff

--- a/views/book-puja.pug
+++ b/views/book-puja.pug
@@ -5,4 +5,4 @@ block content
     .container
         h1 Puja links:
 
-        a(href='/annaprashan') Annaprashan puja
+        a(href='./users/annaprashan') Annaprashan puja
