added authentication and password hashing

--- a/views/book-puja.pug
+++ b/views/book-puja.pug
@@ -5,4 +5,15 @@ block content
     .container
         h1 Puja links:
 
-        a(href='./users/annaprashan') Annaprashan puja
+        a(href='./annaprashan') Annaprashan puja <br/>
+        a(href='./bhoomi-puja') Bhoomi puja <br/>
+        a(href='./gauri-puja') Gauri puja <br/>
+        a(href='./bhoomi-puja') Bhoomi puja <br/>
+        a(href='./bhoomi-puja') Bhoomi puja <br/>
+        a(href='./bhoomi-puja') Bhoomi puja <br/>
+        a(href='./bhoomi-puja') Bhoomi puja <br/>
+        a(href='./bhoomi-puja') Bhoomi puja <br/>
+        a(href='./bhoomi-puja') Bhoomi puja <br/>
+        a(href='./bhoomi-puja') Bhoomi puja <br/>
+        a(href='./bhoomi-puja') Bhoomi puja <br/>
+        a(href='./bhoomi-puja') Bhoomi puja <br/>
