--- a/views/billing-form.pug
+++ b/views/billing-form.pug
@@ -39,4 +39,4 @@ block content
                         input.form-control(name='email', type='email', placeholder='Enter your email id')
 
                     .row.form-group.col-md-8
-                        button.btn.btn-primary.btn-md Proceed to pay
+                        input.btn.btn-primary.btn-md Proceed to pay
