--- a/views/login-pandit.pug
+++ b/views/login-pandit.pug
@@ -5,14 +5,14 @@ block content
         h1 Login
         .row
             .form-group.col-md-12
-                form.form-horizontal.login-font(method='post', action='/users/login')
+                form.form-horizontal.login-font(method='post', action='/users/login-pandit')
                     .form-group.row.col-md-4
                         label.control-label Email or User name:
                         input.form-control(type='text', name='uname', placeholder='Enter your email or username' ,required='required')
                     
-                    form-group.row.col-md-4
+                    .form-group.row.col-md-4
                         label.control-label Password:
                         input.form-control(type='password', name='password', placeholder='Enter your password', required='required')
                     
-                    form-group.row.col-md-6
+                    .form-group.row.col-md-6
                         input.btn.btn-success.btn-md(type='submit',name='submit', value='Login') 
