Added pandits pages

--- a/views/bhoomi-puja.hbs
+++ b/views/bhoomi-puja.hbs
@@ -8,10 +8,13 @@
     <body>
         {{> header}}
         <div class="container">
+            <h2 style="margin-top: 58px; margin-bottom: 4.5rem;text-align: center;font-weight:400;font-weight: 500;font-family: initial;">
+                Bhoomi puja
+            </h2>
             <form class="form-vertical">
                 <div class="row form-group col-md-12">
                     <div class="col">
-                        <img src="/images/bhoomi.png" alt="oops not showing">
+                        <img src="/images/pujas/bhoomi.png" alt="oops not showing">
                     </div>
                     <div class="col">
                         <p>The month of shravan, kartik, margshirsh and paush of Hindu calendar are the most suitable time for the pujan of land. It is necessary to worship the land before construction work starts. Be careful while selecting the time for puja.Monday and Thursday proves to be the best day for puja.
