--- a/views/book-puja.hbs
+++ b/views/book-puja.hbs
@@ -4,10 +4,22 @@
     <head>
         <meta charset="utf-8">
         <title>Billing Page </title>
+        <link rel="stylesheet" href="/stylesheets/modal.css">
     </head>
     <body>
         {{> header}}
         <div class="container">
+            <p>Puja is an act of displaying veneration to god through invocations and numerous rituals. a very important 
+                side of puja is to create a religious relationship with the spiritual being. pujas facilitate individuals 
+                to usher in positivism, improve confidence and attract wealth and prosperity.
+                <br>Pujas are performed for seeking divine grace and blessings of assorted gods and goddesses or to 
+                attain specific objectives. Varied pujas are conducted for varied functions like for getting peace, 
+                healthiness, gaining material abundance and religious prosperity. Pujas like shanti pujas and dosh 
+                nivaran pujas also are very helpful to block negativity. Pujas are powerful and effective observe in 
+                one’s religious journey on the way to enlightenment. pujas holds utmost significance and therefore
+                 additionally to general pujas, special online puja are performed throughout numerous occasions and 
+                 events. Find Ur Panditji provides online puja booking services and also conducts pujas at devotees home.
+            </p>
             <h1>Puja links:</h1>
 
             <a href="./annaprashan">Annaprashan Puja</a> <br />
@@ -19,6 +31,69 @@
             <a href="./annaprashan.">Annaprashan Puja</a>   <br />
 
             
+        </div>
+        
+        <div class="container">
+            <h1>Puja links:</h1>
+            <form class="form-group form-horizontal">
+                <div class="row">
+                    <div class="col">
+                        <div class="polaroid">
+                            <img src="/images/pujas/annprashan2 (2).jpg", alt="island">
+                            <div class="img-container">
+                                <p><a href="annaprashan">Annaprashan Puja</a></p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="polaroid">
+                            <img src="/images/pujas/bhoomi2.png", alt="island">
+                            <div class="img-container">
+                                <p><a href="bhoomi-puja">Bhoomi Puja</a></p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="polaroid">
+                            <img src="/images/pujas/bhoomi2.png", alt="island">
+                            <div class="img-container">
+                                <p><a href="gauri-puja">Gauri Puja</a></p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="polaroid">
+                            <img src="/images/pujas/bhoomi2.png", alt="island">
+                            <div class="img-container">
+                                <p><a href="gauri-puja">jk,bPuja</a></p>
+                            </div>
+                        </div>
+                    </div>
+                        
+                </div>
+
+                <div class="row">
+                    
+                    <div class="col">
+                        <div class="polaroid">
+                            <img src="/images/pujas/bhoomi2.png", alt="island">
+                            <div class="img-container">
+                                <p><a href="bhoomi-puja">Bhoomi Puja</a></p>
+                            </div>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="polaroid">
+                            <img src="/images/annprashan2 (2).jpg", alt="island">
+                            <div class="img-container">
+                                <p>Cinque terrs</p>
+                            </div>
+                        </div>
+                    </div>
+                        
+                </div>
+            </form>
         </div>
         {{> footer}}
     </body>
