--- a/views/error.hbs
+++ b/views/error.hbs
@@ -9,7 +9,8 @@
         {{> header}}
         <div class="container">
             <h1>Message</h2>
-
+            {{!-- {{error.status}} --}}
+            {{!-- {{error.stack}} --}}
             {{!-- h1= message
             h2= error.status
             pre #{error.stack} --}}
