--- a/views/home-page.hbs
+++ b/views/home-page.hbs
@@ -7,7 +7,7 @@
     </head>
     <body>
         {{> header}}
-        <div class="container">
+        <div class="container" style="font-family: monospace;font-size: 18px; font-weight: bold;">
             <p> findurpanditji.com serve you for your exact and customized religious need with our well experienced panditji and samagri at reasonable prices and hassle free service. Its a easy way to find and book pandit online.We provide you pandit for puja at very reasional dakshina. Just contact us on our Mobile numbers ,E-mail address for your queries and we will guide you about the exact nature of services available with us. We specialize in conducting religious puja at your place of convenience. findurpanditji.com provides you to book pandit online. We specialize in conducting religious pujas - Namakaran puja, Mundan puja, Birthday puja, Janeu(Sacred Thread) puja, SatyaNarayan Puja, Griha Pravesh, Bhoomi Puja, Navagraha Shanti Puja, Vastu Shanti Pooja, Rudra Abhishek, New Business, vivah puja, Narayan Nagbali Puja, Engagement puja, Laxmi Puja, Ganesha puja& Durga Puja, Mata ki Chouki & Jaagran, Maha Mritunjya Jaap Puja, Yagna Havans, Kalsarpa Puja, Shradh Puja, Last Right Rituals. Allpanditji provides you best online pandit booking services for puja. We provide pandit for puja in Mumbai, Navi Mumbai, Delhi, Hyderabad, Bangalore, kolkata and all major cities of India. We provide top pandit for puja. Book pandit for puja online now.
                 <br/>
 
