--- a/views/login-pandit.hbs
+++ b/views/login-pandit.hbs
@@ -12,7 +12,7 @@
             {{!-- <p>Please register using this form below</p> --}}
             <div class="row">
                 <div class="form-group col-md-12">
-                    <form class="form-horizontal login-font">
+                    <form class="form-horizontal login-font" method="POST" action="/users/login-pandit">
                        <div class="row form-group col-md-4">
                            <label class="control-label">
                                Email or user name:
