--- a/views/mahamrityunjaya.hbs
+++ b/views/mahamrityunjaya.hbs
@@ -3,22 +3,25 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Gauri Puja page </title>
+        <title>Mahamrityunjaya Puja page </title>
     </head>
     <body>
         {{> header}}
         <div class="container">
             <h2 style="margin-top: 58px; margin-bottom: 4.5rem;text-align: center;font-weight:400;font-weight: 500;font-family: initial;">
-                Gauri puja
+                Mahamrityunjaya puja
             </h2>
             <form class="form-vertical">
                 <div class="row form-group col-md-12">
                     <div class="col">
-                        <img src="/images/pujas/gauri-puja.png" alt="oops not showing">
+                        <img src="/images/pujas/mahamrityunjaya.png" alt="oops not showing">
                     </div>
                     <div class="col">
-                        <p>Goddess Gauri is invited home and worshipped for three days. Married women pray to her for marital bliss and the long life of their husbands. Unmarried girls worship her in order to get virtuous husbands. The Gauri puja begins on the third day after Ganesh Chaturthi. This day is known as the avahana (arrival) as it is on this day that the Goddess is brought into the home. Following our tradition, the married women in the house draw small footsteps of the Goddess using rangoli (coloured) powder, following which Gauri's murti (idol) is brought home. 
-                       </p>
+                        <p>Maha Mrityunjaya Mantra: || Om Tryambakam Yajamahe 
+                            <br>Sugandhim Pushtivardhanam || Urvarukamiva Bandhanan 
+                            <br>    Mrityor Mukshiya Maamritat 
+                            The great mantra dedicated to Shiva as Mrityunjaya is found in the Rig Veda. It is called the Maha Mrityunjaya mantra, the Great Death-Conquering mantra. It is a mantra that has many names and forms. It is called the Rudra mantra, referring to the furious aspect of Shiva; the Tryambakam mantra, alluding to Shiva's three eyes; and its is sometimes known as the Mrita-Sanjivini mantra because it is a component of the "life-restoring" practice given to the primordial sage Shukra after he had completed an exhausting period of austerity. The Maha Mrityunjaya mantra is hailed by the sages as the heart of the Veda. Along with the Gayatri mantra it holds the highest place among the many mantras used for contemplation and meditation. Lord Shiva is referred to as tryambakam, the three-eyed one, because his third-eye has been "opened" by the powers of penance and meditation. The third eye is said to be located in the space between the eyebrows, and is "opened" when one experiences spiritual awakening. So, when we pray to Lord Shiva, we are in essence asking for his blessings and assistance in opening our third eye of spiritual knowledge. 
+                        </p>
                     </div>
                 </div>
                 <hr>
@@ -36,6 +39,7 @@
                             <li>Abir</li>
                             <li>Gulal</li>
                             <li>Moli/Rakshasutra</li>
+                            <li>gud(Jaggery</li>
                             <li>Sahad(Honey)</li>
                             <li>Mishri(Suger Candy)</li>
                             <li>Itra(perfume)</li>
