--- a/views/partials/footer.hbs
+++ b/views/partials/footer.hbs
@@ -1,63 +1,21 @@
 
 <head>
-    <link rel="stylesheet" href="/stylesheets/style.css">
     <link rel="stylesheet" href="/stylesheets/bootstrap.css">
-    <script src="/javascript/bootstrap.js"></script>
-    <script src="/javascript/jquery-3.3.1.min.js"></script>
+    <link  rel="stylesheet" href="/stylesheets/main.css"/>
+    <script src="/javascripts/bootstrap.js"></script>
+    <script src="/javascripts/jquery-3.3.1.min.js"></script>
 </head>
 
-<footer class="page-footer font-small blue pt-4">
-    {{!-- Footer links --}}
-    <div class="container-fluid text-center text-md-left" style="background-color: #c7dff5;">
-     {{!-- Grid row  --}}
-        <div class="row">
-            {{!-- Grid coloumn --}}
-            <div class="col-md-6 mt-md-0 mt-3">
-                {{!-- content --}}
-                <h5 class="text-uppercase"></h5>
-                <p>Here you can use rows and columns here to organize your footer content.  </p>
-                {{!-- Grid column --}}
-                <hr class="clearfix w-100 d-md-none pb-3">
-                {{!-- Grid coloumn --}}
-                <div class="col-md-3 mb-md-0 mb-3">
-                    {{!-- Links --}}
-                    <h5 class="text-uppercase"> Links </h5>
-                    <ul class="text-unstyled">
-                        <li> <a href="#!"> Link 1</a></li>
-                        <li> <a href="#!"> Link 2</a></li>
-                        <li> <a href="#!"> Link 3</a></li>
-                        <li> <a href="#!"> Link 4</a></li>
-                    </ul>
-                </div>
-                 {{!-- // Grid column
-                // Grid column
-                //- .col-md-3.mb-md-0.mb-3
-                //-     // Links
-                //-     h5.text-uppercase Links
-                //-     ul.list-unstyled
-                //-     li
-                //-         a(href='#!') Link 1
-                //-     li
-                //-         a(href='#!') Link 2
-                //-     li
-                //-         a(href='#!') Link 3
-                //-     li
-                //-         a(href='#!') Link 4
-                // Grid column
-                // Grid row --}}
-                
-            </div>
-        </div>
+<footer id="footer" style="background-color:#7e7b7b;">
+    <div class="container">
+        <ul class="icons">
+            <li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
+            <li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+            <li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
+            <li><a href="#" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
+        </ul>
     </div>
-
-    {{!-- Footer links --}}
-    {{!-- COpyright --}}
-    <div class="footer-copyright text-center py-3">
-         {{!-- &copy; 2018 Copyright:
-        a(href='https://mdbootstrap.com/education/bootstrap/')  MDBootstrap.com --}}
-    
+    <div class="copyright">
+        &copy; Untitled. All rights reserved.
     </div>
-    {{!-- // Copyright
-    // Footer --}}
-
 </footer>
