--- a/views/rudrabhishek.hbs
+++ b/views/rudrabhishek.hbs
@@ -3,22 +3,27 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Gauri Puja page </title>
+        <title>Rudrabhishek page </title>
     </head>
     <body>
         {{> header}}
         <div class="container">
             <h2 style="margin-top: 58px; margin-bottom: 4.5rem;text-align: center;font-weight:400;font-weight: 500;font-family: initial;">
-                Gauri puja
+                Rudrabhishek puja
             </h2>
             <form class="form-vertical">
                 <div class="row form-group col-md-12">
                     <div class="col">
-                        <img src="/images/pujas/gauri-puja.png" alt="oops not showing">
+                        <img src="/images/pujas/rudrabhishek.png" alt="oops not showing">
                     </div>
                     <div class="col">
-                        <p>Goddess Gauri is invited home and worshipped for three days. Married women pray to her for marital bliss and the long life of their husbands. Unmarried girls worship her in order to get virtuous husbands. The Gauri puja begins on the third day after Ganesh Chaturthi. This day is known as the avahana (arrival) as it is on this day that the Goddess is brought into the home. Following our tradition, the married women in the house draw small footsteps of the Goddess using rangoli (coloured) powder, following which Gauri's murti (idol) is brought home. 
-                       </p>
+                        <p>Rudra Abhisheka is a ritual of worshipping Lord Shiva in the Rudra form. In this method, the Shiv
+                             linga is washed by the water, which continuously keeps pouring on it through a vessel along with
+                              the continuous chanting of Vedic mantra called the Rudra Sukhta. In all the Vedic scriptures the
+                               Rudra Abhishek puja is considered as the greatest spiritual puja. Abhisheka is a ritual in the, 
+                               which you worship of God with substances like milk (cow milk), Ghee, Curd, honey, coconut water,
+                                rice, water, sugarcane juice, powdered sugar and several more similar items as advised by pandits.
+                                 These spiritual items used in the puja are generally those items, which are liked by the Lord Shiva.                         </p>
                     </div>
                 </div>
                 <hr>
@@ -36,6 +41,7 @@
                             <li>Abir</li>
                             <li>Gulal</li>
                             <li>Moli/Rakshasutra</li>
+                            <li>gud(Jaggery</li>
                             <li>Sahad(Honey)</li>
                             <li>Mishri(Suger Candy)</li>
                             <li>Itra(perfume)</li>
