--- a/views/annaprashan.hbs
+++ b/views/annaprashan.hbs
@@ -3,7 +3,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Annaprashan</title>
+        <title>Annaprashan Puja</title>
     </head>
     <body>
         {{> header}}
@@ -12,24 +12,88 @@
                 Annaprashan puja
             </h2>
             <form class="form-vertical">
-                <div class="row form-group col-md -12">
+                <div class="row form-group col-md-12">
                     <div class="col">
-                        <img src="/images/annprashan.pug" alt="oops not showing">
+                        <img src="/images/pujas/annprashan.jpg" alt="oops not showing">
                     </div>
-                    <div class="col" style="backround-color: aliceblue">
-                        <label class="control-label col-form-label col-md-5">
-                            501
-                        </label>
-                        <button class="btn btn-primary btn-md" name="annaprashan">Book puja</button>
+                    <div class="col">
+                        <p style="margin-top: 27px;">Annaprashan is a popular Hindu ritual which marks the beginning of solid food intake by newborn babies. Following this ritual, the other weaning foods are introduced to newborn baby’s diet . While the rituals of the ceremony may differ according to the region, Annaprashan Celebrates baby's transition towards solids food. Annaprashan is conducted when a newborn baby is ready to consume solids diet. Annaprashan Ceremony can be performed after six months and before the first birthday. For boys, Annaprashan is performed during the even months, generally in the child's sixth, eighth or tenth month. Annaprashan is performed during the odd months for girls, usually the child's seventh, ninth or eleventh month. Annaprashan is ceremony is mainly conducted at home or at a temple.   </p>
+
+                        <p>The aim of Annaprashan Sanskar is showing the sense of purity and it is performed for healthy growth and strength of the body. It teaches the importance of piousness of food. Scriptures say, if you eat pious food your mind will be pious. Food is not for the taste but for health and growth of the body as well as the mind. Gods and Goddesses are first invoked and offered the food before feeding the child.   </p>
+
+                    </div>
+                </div>
+                <hr>
+
+                <h5 style="font-weight:bold;"> Puja items/ Samagri kit</h5>
+                <div class="row">
+                    <div class="col">
+                        <ul>
+                            <li>Ghee</li>
+                            <li>Lal-kapda(Red-cloth)</li> 
+                            <li>Supari(Betel Nut)</li>
+                            <li>Haldi(Turmeric Powder)</li>
+                            <li>Kumkum</li>
+                            <li>Sindoor</li>
+                            <li>Abir</li>
+                            <li>Gulal</li>
+                            <li>Moli/Rakshasutra</li>
+                            <li>gud(Jaggery</li>
+                            <li>Sahad(Honey)</li>
+                            <li>Mishri(Suger Candy)</li>
+                            <li>Itra(perfume)</li>
+                            <li>Kapoor(Camphor)</li>
+                            <li>Laung(cloves)</li>
+                            <li>Eliyachi(cardamon)</li>
+                        </ul>
+                    </div>
+                    <div class="col">
+                        <ul>
+                            <li>peeli sarso(Yellow Mustard Seeds)</li>
+                            <li>Janeu(Sacred Thread)</li>
+                            <li>Haldi Gath(Dry Turmeric)</li>
+                            <li>Khajur( Dry dates)</li>
+                            <li>Nariyals(Dry Coconut)</li>
+                            <li>Gulab Jal(Rose Water)</li>
+                            <li>Ganga Jal(Holy Water)</li>
+                            <li>Gaumutra(Cow Urine)</li>
+                            <li>Capus-Batti(Cotton Wick)</li>
+                            <li>Agarbati(Incense Stick)</li>
+                            <li>kapus Vastra</li>
+                            <li>Rice</li>
+                            <li>Dona Packet</li>
+                            <li>Match Stick/Machis</li>
+                            <li>Durva</li>
+                            <li>Aam Patta,Tulsi</li>
+                        </ul>
+                    </div>
+                    <div class="col">
+                        <ul>
+                            <li>Belpata</li>
+                            <li>Phool/Mala</li>
+                            <li>Panpata</li>
+                            <li>Sweets</li>
+                            <li>1 Bowl of Panchmarit(Milk,Curd,Honey,Ghee and Sugar</li>
+                            <li>1 Kalash</li>
+                            <li>Pata/Chaurang</li>
+                            <li>5 fruits</li>
+                            <li>2 Thali</li>
+                            <li>2 Bowl</li>
+                            <li>2 Spoons</li>
+                            <li>Photo</li>
+                            <li>Aasan</li>
+                            <li>Deepak</li>
+                        </ul>
                     </div>
                 </div>
             </form>
             
             <hr>
-            <p style="margin-top: 27px;">Annaprashan is a popular Hindu ritual which marks the beginning of solid food intake by newborn babies. Following this ritual, the other weaning foods are introduced to newborn baby’s diet . While the rituals of the ceremony may differ according to the region, Annaprashan Celebrates baby's transition towards solids food. Annaprashan is conducted when a newborn baby is ready to consume solids diet. Annaprashan Ceremony can be performed after six months and before the first birthday. For boys, Annaprashan is performed during the even months, generally in the child's sixth, eighth or tenth month. Annaprashan is performed during the odd months for girls, usually the child's seventh, ninth or eleventh month. Annaprashan is ceremony is mainly conducted at home or at a temple.   </p>
-            
-            <p>The aim of Annaprashan Sanskar is showing the sense of purity and it is performed for healthy growth and strength of the body. It teaches the importance of piousness of food. Scriptures say, if you eat pious food your mind will be pious. Food is not for the taste but for health and growth of the body as well as the mind. Gods and Goddesses are first invoked and offered the food before feeding the child.   </p>
-        </div>
+            </div>
         {{> footer}}
     </body>
 </html>
+
+
+
+
